--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,34 +7,57 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="160dp">
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/profile_mock"
-            android:layout_alignParentLeft="true"
-            android:id="@+id/profilePic"
-            android:layout_margin="5dp"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="160dp">
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/profile_mock"
+                android:layout_alignParentLeft="true"
+                android:id="@+id/profilePic"
+                android:layout_margin="5dp"/>
+            <Button
+                android:id="@+id/logOut"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/profilePic"
+                android:text="Logout"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_toRightOf="@+id/profilePic"
+                android:text="Logged as\nJonnyJohnTheJonniest"
+                android:textSize="20dp"
+                android:textAlignment="textEnd"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"/>
+        </RelativeLayout>
         <Button
-            android:id="@+id/logOut"
+            android:id="@+id/myProfile"
+            android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/profilePic"
-            android:text="Logout"/>
-        <TextView
+            android:text="My Profile"/>
+        <Button
+            android:id="@+id/myHobbies"
+            android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@+id/profilePic"
-            android:text="Logged as\nJonnyJohnTheJonniest"
-            android:textSize="20dp"
-            android:textAlignment="textEnd"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"/>
-    </RelativeLayout>
+            android:text="My Hobbies"/>
+        <Button
+            android:id="@+id/search"
+            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Search for Companions"/>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
