Registration cleanup and failure path
Removed unnecessary redundant task. Added paths for failed registration.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,7 @@
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:singleLine="true"
-                    android:text="john@john.com"/>
+                    android:text="user@user.user"/>
 
             </android.support.design.widget.TextInputLayout>
 
