Passing user and token info between activities

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -30,6 +30,7 @@
                 android:layout_toRightOf="@+id/profilePic"
                 android:text="Logout"/>
             <TextView
+                android:id="@+id/accountName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
