--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/edit_profile_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,6 +18,7 @@
             app:layout_constraintEnd_toEndOf="parent">
 
             <Button
+                android:id="@+id/save_profile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Save" />
@@ -26,7 +28,7 @@
                 android:layout_height="160dp">
 
                 <ImageView
-                    android:id="@+id/profilePic"
+                    android:id="@+id/profile_pic"
                     android:layout_width="150dp"
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
@@ -35,20 +37,32 @@
                     android:src="@drawable/profile_mock" />
 
                 <Button
-                    android:id="@+id/profileOthers"
+                    android:id="@+id/profile_others"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/profilePic"
+                    android:layout_toRightOf="@id/profile_pic"
                     android:text="Show how others see me" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/profilePic"
+                    android:layout_centerVertical="false"
+                    android:layout_below="@id/profile_others"
+                    android:layout_toRightOf="@+id/profile_pic"
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginRight="5dp"
+                        android:text="jhonny@mail.com"
+                        android:textAlignment="textEnd"
+                        android:textSize="20dp" />
+
+                    <EditText
+                        android:id="@+id/nick"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
@@ -87,9 +101,8 @@
                     android:text="Gender" />
 
                 <RadioGroup
-                    android:id="@+id/radioGroup1"
+                    android:id="@+id/genderGroup"
                     android:layout_alignParentLeft="true"
-                    android:layout_below="@+id/textView1"
                     android:layout_columnWeight="1"
                     android:layout_gravity="fill"
                     android:orientation="horizontal">
@@ -115,6 +128,7 @@
                 </RadioGroup>
 
                 <CheckBox
+                    android:id="@+id/genderVisible"
                     android:layout_columnWeight="1"
                     android:layout_gravity="center"
                     android:checked="true" />
@@ -133,6 +147,7 @@
                     android:text="2" />
 
                 <CheckBox
+                    android:id="@+id/ageVisible"
                     android:layout_columnWeight="1"
                     android:layout_gravity="center" />
 
@@ -143,6 +158,7 @@
                     android:text="Interests" />
 
                 <EditText
+                    android:id="@+id/interests"
                     android:layout_columnWeight="1"
                     android:layout_gravity="fill"
                     android:layout_marginLeft="5dp"
@@ -150,6 +166,7 @@
                     android:text="video games" />
 
                 <CheckBox
+                    android:id="@+id/interestsVisible"
                     android:layout_columnWeight="1"
                     android:layout_gravity="center"
                     android:checked="true" />
