--- a/app/src/main/res/layout/activity_profile_others.xml
+++ b/app/src/main/res/layout/activity_profile_others.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_others_profile"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,7 +21,7 @@
                 android:layout_height="160dp">
 
                 <ImageView
-                    android:id="@+id/profilePic"
+                    android:id="@+id/profile_pic"
                     android:layout_width="150dp"
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
@@ -32,7 +33,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/profilePic"
+                    android:layout_toRightOf="@+id/profile_pic"
                     android:layout_marginBottom="5dp"
                     android:layout_marginRight="5dp"
                     android:text="JohnnyTheJohnniest"
