--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -166,7 +166,7 @@
                     android:text="video games" />
 
                 <CheckBox
-                    android:id="@+id/interestsVisible"
+                    android:id="@+id/interests_visible"
                     android:layout_columnWeight="1"
                     android:layout_gravity="center"
                     android:checked="true" />
@@ -186,7 +186,7 @@
                     android:text="John" />
 
                 <CheckBox
-                    android:id="@+id/nameVisible"
+                    android:id="@+id/name_visible"
                     android:layout_columnWeight="1"
                     android:layout_gravity="center"
                     android:checked="true" />
@@ -206,7 +206,7 @@
                     android:text="Johner" />
 
                 <CheckBox
-                    android:id="@+id/surnameVisible"
+                    android:id="@+id/surname_visible"
                     android:layout_columnWeight="1"
                     android:layout_gravity="center" />
 
@@ -229,7 +229,7 @@
                     android:text="I'm new to tabletop community. I would like to find someon nto play with." />
 
                 <CheckBox
-                    android:id="@+id/descriptionVisible"
+                    android:id="@+id/description_visible"
                     android:layout_columnWeight="1"
                     android:layout_gravity="center"
                     android:checked="true" />
