--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,21 +20,21 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/profile_mock"
                 android:layout_alignParentLeft="true"
-                android:id="@+id/profilePic"
+                android:id="@+id/profile_pic"
                 android:layout_margin="5dp"/>
             <Button
                 android:id="@+id/logOut"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/profilePic"
+                android:layout_toRightOf="@+id/profile_pic"
                 android:text="Logout"/>
             <TextView
                 android:id="@+id/accountName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_toRightOf="@+id/profilePic"
+                android:layout_toRightOf="@+id/profile_pic"
                 android:text="Logged as\nJonnyJohnTheJonniest"
                 android:textSize="20dp"
                 android:textAlignment="textEnd"
