--- a/app/src/main/res/layout/activity_profile_others.xml
+++ b/app/src/main/res/layout/activity_profile_others.xml
@@ -30,6 +30,7 @@
                     android:src="@drawable/profile_mock" />
 
                 <TextView
+                    android:id="@+id/nick"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
@@ -61,40 +62,57 @@
                     android:layout_marginLeft="5dp"
                     android:text="Male" />
 
-
-
-
                 <TextView
+                    android:id="@+id/interests_label"
                     android:layout_columnWeight="1"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="5dp"
                     android:text="Interests" />
 
                 <TextView
+                    android:id="@+id/interests"
                     android:layout_columnWeight="1"
                     android:layout_gravity="fill"
                     android:layout_marginLeft="5dp"
                     android:text="video games" />
 
                 <TextView
+                    android:id="@+id/name_label"
                     android:layout_columnWeight="1"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="5dp"
                     android:text="Name" />
 
                 <TextView
+                    android:id="@+id/name"
                     android:layout_columnWeight="1"
                     android:layout_gravity="fill"
                     android:layout_marginLeft="5dp"
                     android:text="John" />
 
                 <TextView
+                    android:id="@+id/surname_label"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="5dp"
+                    android:text="Surname" />
+
+                <TextView
+                    android:id="@+id/surname"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="fill"
+                    android:layout_marginLeft="5dp"
+                    android:text="John" />
+
+                <TextView
+                    android:id="@+id/description_label"
                     android:layout_columnWeight="1"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="5dp"
                     android:text="Description" />
 
                 <TextView
+                    android:id="@+id/description"
                     android:width="100dp"
                     android:layout_columnWeight="1"
                     android:layout_gravity="fill"
