--- a/app/src/main/res/layout/activity_profile_others.xml
+++ b/app/src/main/res/layout/activity_profile_others.xml
@@ -37,7 +37,7 @@
                     android:layout_toRightOf="@+id/profile_pic"
                     android:layout_marginBottom="5dp"
                     android:layout_marginRight="5dp"
-                    android:text="JohnnyTheJohnniest"
+                    android:text="Nick"
                     android:textAlignment="textEnd"
                     android:textSize="20dp" />
             </RelativeLayout>
@@ -74,7 +74,7 @@
                     android:layout_columnWeight="1"
                     android:layout_gravity="fill"
                     android:layout_marginLeft="5dp"
-                    android:text="video games" />
+                    android:text="Interests" />
 
                 <TextView
                     android:id="@+id/name_label"
@@ -88,7 +88,7 @@
                     android:layout_columnWeight="1"
                     android:layout_gravity="fill"
                     android:layout_marginLeft="5dp"
-                    android:text="John" />
+                    android:text="Name" />
 
                 <TextView
                     android:id="@+id/surname_label"
@@ -102,7 +102,7 @@
                     android:layout_columnWeight="1"
                     android:layout_gravity="fill"
                     android:layout_marginLeft="5dp"
-                    android:text="John" />
+                    android:text="Surname" />
 
                 <TextView
                     android:id="@+id/description_label"
@@ -119,8 +119,9 @@
                     android:layout_marginLeft="5dp"
                     android:breakStrategy="simple"
                     android:maxLines="10"
-                    android:minLines="2"
-                    android:text="I'm new to tabletop community. I would like to find someone to play with." />
+                    android:minLines="3"
+                    android:gravity="center_vertical"
+                    android:text="Description" />
 
                 <TextView
                     android:layout_columnWeight="1"
