--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -57,7 +57,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
                         android:layout_marginRight="5dp"
-                        android:text="jhonny@mail.com"
+                        android:text="example@mail.com"
                         android:textAlignment="textEnd"
                         android:textSize="20dp" />
 
@@ -67,7 +67,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
                         android:layout_marginRight="5dp"
-                        android:text="JohnnyTheJohnniest"
+                        android:text="Nick"
                         android:textAlignment="textEnd"
                         android:textSize="20dp" />
                 </LinearLayout>
@@ -130,8 +130,7 @@
                 <CheckBox
                     android:id="@+id/genderVisible"
                     android:layout_columnWeight="1"
-                    android:layout_gravity="center"
-                    android:checked="true" />
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:layout_columnWeight="1"
@@ -144,7 +143,7 @@
                     android:layout_gravity="fill"
                     android:layout_marginLeft="5dp"
                     android:inputType="numberDecimal"
-                    android:text="2" />
+                    android:text="1" />
 
                 <CheckBox
                     android:id="@+id/ageVisible"
@@ -163,13 +162,12 @@
                     android:layout_gravity="fill"
                     android:layout_marginLeft="5dp"
                     android:inputType="text"
-                    android:text="video games" />
+                    android:text="Interests" />
 
                 <CheckBox
                     android:id="@+id/interests_visible"
                     android:layout_columnWeight="1"
-                    android:layout_gravity="center"
-                    android:checked="true" />
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:layout_columnWeight="1"
@@ -183,13 +181,12 @@
                     android:layout_gravity="fill"
                     android:layout_marginLeft="5dp"
                     android:inputType="text"
-                    android:text="John" />
+                    android:text="Name" />
 
                 <CheckBox
                     android:id="@+id/name_visible"
                     android:layout_columnWeight="1"
-                    android:layout_gravity="center"
-                    android:checked="true" />
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:layout_columnWeight="1"
@@ -203,7 +200,7 @@
                     android:layout_gravity="fill"
                     android:layout_marginLeft="5dp"
                     android:inputType="text"
-                    android:text="Johner" />
+                    android:text="Surname" />
 
                 <CheckBox
                     android:id="@+id/surname_visible"
@@ -226,13 +223,12 @@
                     android:inputType="textMultiLine"
                     android:maxLines="10"
                     android:minLines="3"
-                    android:text="I'm new to tabletop community. I would like to find someon nto play with." />
+                    android:text="Description" />
 
                 <CheckBox
                     android:id="@+id/description_visible"
                     android:layout_columnWeight="1"
-                    android:layout_gravity="center"
-                    android:checked="true" />
+                    android:layout_gravity="center" />
 
             </GridLayout>
 
